fix codemirror white space wrap

--- a/app/assets/stylesheets/codemirror.css
+++ b/app/assets/stylesheets/codemirror.css
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+.cm-content {
+  white-space: pre-wrap;
+}
+
 .cm-content:focus {
   outline: 0;
 }
